# dmarc-report-parser

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: audit.yml  delete_merged_branch.yml  lint.yml  release.yml  tag.yml  test.yml
docs/: cli-usage.md  library-usage.md
src/: error.rs  lib.rs  main.rs
src/render/: html_fmt.rs  markdown_fmt.rs  mod.rs  terminal_fmt.rs
tests/: cli.rs
tests/fixtures/: minimal.xml  second.xml
