[package]
name = "dmarc-report-parser"
version = "0.1.5"
edition = "2021"
description = "An RFC 7489-compliant DMARC aggregate report parser"
license = "MIT"
keywords = ["dmarc", "email", "parser", "rfc7489", "xml"]
categories = ["email", "parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.39", features = ["serialize"] }
thiserror = "2"
clap = { version = "4.5", features = ["derive"], optional = true }
colored = { version = "3", optional = true }
zip = { version = "8", optional = true, default-features = false, features = ["deflate"] }
chrono = { version = "0.4", optional = true, default-features = false, features = ["std"] }
flate2 = { version = "1", optional = true }

[[bin]]
name = "dmarc-report"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:colored", "dep:zip", "dep:chrono", "dep:flate2"]

[workspace.metadata.dist]
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-pc-windows-msvc"]
